# sdl_template

./: CMakeLists.txt  main.c  readme.md
